<resources>
    <string name="app_name">Blood Donation</string>

    <!-- Strings related to login -->
    <string name="title_activity_maps">Map</string>
    <string name="blood_donor">Blood Donor</string>

    <string name="blood_news">Blood News</string>

    <string name="blood_request">Blood Request</string>
    <string name="blood_notification">Blood Notification</string>
    <string name="my_request">My Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>
    <string name="action_exit">Exit</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_newsfeed">Newsfeed</string>
    <string name="menu_findhospital">Find Hospital</string>
    <string name="menu_neerbyhospital">Nearby Hospitals in Map</string>
    <string name="menu_finddoctor">Find Doctor</string>
    <string name="menu_findambulance">Find Ambulance</string>
    <string name="menu_donationtips">Donation Tips</string>
    <string name="menu_share">Share</string>
    <string name="menu_aboutus">About us</string>
    <string name="title_activity_main">Home Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->


</resources>
