<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_newsfeed"
            android:icon="@drawable/ic_newsfeed"
            android:title="@string/menu_newsfeed" />
        <item
            android:id="@+id/nav_findhospital"
            android:icon="@drawable/ic_find_hospital"
            android:title="@string/menu_findhospital"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/nav_neerbyhospital"
            android:icon="@drawable/ic_neerby_hospital"
            android:title="@string/menu_neerbyhospital" />
        <item
            android:id="@+id/nav_finddoctor"
            android:icon="@drawable/ic_find_doctor"
            android:title="@string/menu_finddoctor" />
        <item
            android:id="@+id/nav_findambulance"
            android:icon="@drawable/ic_find_ambulance"
            android:title="@string/menu_findambulance" />
        <item
            android:id="@+id/nav_donationtips"
            android:icon="@drawable/ic_donation_tips"
            android:title="@string/menu_donationtips" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_about_us"
                android:title="@string/menu_aboutus" />

        </menu>
    </item>

</menu>
